deploy-zigbee2mqtt/manifest/_zigbee2mqtt-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: zigbee2mqtt
  labels:
    name: zigbee2mqtt
