deploy-zigbee2mqtt/manifest/zigbee2mqtt-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-service
  namespace: zigbee2mqtt
  annotations:
    metallb.universe.tf/allow-shared-ip: "domotica"
spec:
  selector:
    app: zigbee2mqtt
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.0.245
  ports:
      - port: 48083
        targetPort: zb2mqtt-prt
        name: zb2mqtt-gui
        protocol: TCP
