deploy-zigbee2mqtt/manifest/zigbee2mqtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-ingress
  namespace: zigbee2mqtt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /zigbee2mqtt
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt-service
                port:
                  number: 48083
